# atpg-toolkit

./: .gitattributes  .gitignore  LICENSE  README.md  atpg-toolkit  circuit.py  cli.py  faults.txt  generate_results.sh  pyproject.toml  results-sim.txt  results.txt  ruff.toml  run.py  run_tests.sh  sim.py
.github/workflows/: lint.yml  test.yml
atpg_toolkit/: __about__.py  __init__.py  circuit.py  faultsim.py  gates.py  logic.py  podem.py  simulator.py  structs.py  types.py  util.py
atpg_toolkit/_cli/: __init__.py  __main__.py  _helpers.py  podem_app.py
atpg_toolkit/cli/: __init__.py  __main__.py  fault_app.py  podem_app.py  simulate_app.py
data/: results-faults.txt  results-podem.txt  results-sim.txt
docs/: .justfile  appendix.typ  appendix_a.typ  appendix_b.typ  podem_data.typ  report.typ  report_2.typ  template.typ  template2.typ
podem/: __init__.py  podem.py
scripts/: coverage  demo.sh  generate-results  report2_coverage.py  report2_table.py  report_2.py
scripts/data/: s27-faults.txt  s298f_2-faults.txt  s344f_2-faults.txt  s349f_2-faults.txt
simulator/: __init__.py  __main__.py  circuit.py  cli.py  faultsim.py  podem.py  simulator.py  structs.py  util.py
simulator/_cli/: _helpers.py  faults.py  generate.py  simulate.py
src/atpg_toolkit/: __about__.py  __main__.py  circuit.py  faultsim.py  gates.py  logic.py  podem.py  simulator.py  types.py  util.py
src/atpg_toolkit/cli/: __init__.py  _helpers.py  fault_app.py  podem_app.py  simulate_app.py
tests/: __init__.py  test_circuit.py  test_circuit_simulation.py  test_faultsim.py  test_gate.py  test_module.py  test_package.py  test_podem.py  test_simulator.py
